# Collision_Avoidance_System

./: README.md
src/: Buzzer.c  Buzzer.h  CMakeLists.txt  DCMotor.c  DCMotor.h  IR.c  IR.h  LDR.c  LDR.h  LED.c  LED.h  Ultrasonic.c  Ultrasonic.h  main.c
